fix: [404] Update content, theme, spacing

--- a/src/pages/Error/error.less
+++ b/src/pages/Error/error.less
@@ -3,16 +3,16 @@
    Page-specific styles for the error pages.
    ========================================================================== */
 .error_action_container {
-  margin: 1.875em 0;
+  margin: 30pxem 0;
 }
 .error_action_container .a-btn {
   display: inline-block;
-  margin: 0.9375em 0;
+  margin: 30px 0;
 }
 @media only all and (min-width: 37.5625em) {
   .error_action_container {
     display: table;
-    margin: 2.8125em 0;
+    margin: 30px 0;
   }
   .error_action_container .error_action_col {
     display: table-cell;
@@ -24,6 +24,9 @@
   }
   .error_action_container .a-btn {
     margin: 0.46875em 0;
+  }
+  .error_action_container .contact-us {
+    margin-top: 30px;
   }
 }
 .error_copy_container {
@@ -63,12 +66,8 @@
 .error_copy_container .lead-paragraph {
   margin-top: 0.9375em !important;
 }
-.error_main {
-  background-color: #43484e;
-  color: #ffffff;
-}
+
 .error_main .a-link__jump {
-  color: #ffffff;
   border-color: #ffffff;
   margin-top: 0.46875em;
 }
@@ -92,7 +91,7 @@
 }
 @media only all and (min-width: 37.5625em) {
   .error_main__404 .content_main {
-    margin-bottom: 2.8125em;
+    margin-bottom: 30px;
     padding-bottom: 0;
   }
 }
